# 24-718-Computational-Fluid-Dynamics-Project

./: .gitignore  README.md  find_max_temp.py  fractional_step_method.py  main.py  plot.py  pyproject.toml  tempMethods.py  temperature_method.py
0_notebooks/: 3_2d_melt_pool_velocity_field.html  3_2d_melt_pool_velocity_field.ipynb
1_presentation_code/: tempMethods.py
1_presentation_code/CFD Project Temperature Field/: tempMethods.py
2_report_code/: config.py
figures/: figure_1x2_directional.py  figure_1x5_temporal.py  figure_2x2.py  figure_3x1_streamlines.py  figure_melt_pool_contours.py
notebooks/: 1_basic_2d_fluid_flow.ipynb  2_melt_pool_2d_fluid_flow.ipynb
presentation_code/: TestTemperatureField.py  mainScript.py  tempPlots.py  velocityMethods.py
report_code/: advection.py  boundary_conditions.py  config.py  convection.py  diffusion.py  fractional_step_method.py  laplacian.py  main.py  mainScript.py  mask.py  plot.py  tempPlots.py  temperature.py  timestep.py  utils.py  velocityMethods.py
report_code_old/: boundary_conditions.py  config.py  convection.py  gaussian.py  laplacian.py  main.py  mask.py  timestep.py
results/3_fine/: info.md
results/3_fine_reverse/: info.md
