[project]
name = "24-718-computational-fluid-dynamics-project"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numba>=0.63.0",
    "pint>=0.24.4",
    "rich>=14.2.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
